added macros and navbar fanciness

--- a/content/index.html
+++ b/content/index.html
@@ -1,9 +1,10 @@
 ---
 title: Hello World
-extends: base.j2
-default_block: markdown
+extends: starter.j2
+default_block: content
 ---
 
-### Hello, World!
+Hello, World!
+=============
 
 Hey.
